deployments/envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_grpc_web
          route_config:
            name: local_route
            virtual_hosts:
            - name: all_services
              domains: ["*"]
              cors:
                allow_origin_string_match:
                  - safe_regex:
                      regex: ".*"
                allow_methods: "GET, PUT, DELETE, POST, OPTIONS"
                allow_headers: "keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout"
                expose_headers: "grpc-status,grpc-message,grpc-status-details-bin"
                max_age: "1728000"
              routes:
              - match: { prefix: "/boutiqueshop.CatalogService" }
                route: { cluster: catalog_service, timeout: 0s }
              - match: { prefix: "/boutiqueshop.CartService" }
                route: { cluster: cart_service, timeout: 0s }
              - match: { prefix: "/boutiqueshop.CurrencyService" }
                route: { cluster: currency_service, timeout: 0s }
              - match: { prefix: "/boutiqueshop.RecommendationService" }
                route: { cluster: recommendation_service, timeout: 0s }
              - match: { prefix: "/boutiqueshop.CheckoutService" }
                route: { cluster: checkout_service, timeout: 0s }
          http_filters:
          - name: envoy.filters.http.grpc_web
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: catalog_service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: catalog_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: catalog-service, port_value: 5002 }

  - name: cart_service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: cart_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: cart-service, port_value: 5001 }

  - name: currency_service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: currency_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: currency-service, port_value: 5005 }

  - name: recommendation_service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: recommendation_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: recommendation-service, port_value: 5007 }

  - name: checkout_service
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: checkout_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: checkout-service, port_value: 5008 }
